feat - improve connection pool